[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^7.11.1"
flask = "^3.1.1"
python-dotenv = "^1.1.0"
pandas = "^2.2.3"
downloadduxiu = "^0.9"
stups-tokens = "^1.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
